feat: update all documentation

--- a/development-tools/builder.mdx
+++ b/development-tools/builder.mdx
@@ -1,3 +1,8 @@
+---
+title: 'Site Builder'
+description: 'Managing Builder.io'
+---
+
 ## Introduction
 
 Builder.io is a powerful tool for managing and updating your website content. This guide will walk you through the process of logging in, navigating to your pages, and making changes to your site.
