--- a/development-tools/code-setup.mdx
+++ b/development-tools/code-setup.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Development Tools Setup'
+title: 'Setup'
 description: 'Setting up development tools'
 ---
 
@@ -12,3 +12,13 @@ Learn how to set up the development environment for the Global Salawat platform.
 - Development environment setup
 - Required tools and software
 - Configuration guidelines 
+
+## Local Development
+
+Guide for running and testing the platform in a local environment.
+
+## Getting Started
+
+1. Local server setup
+2. Database configuration
+3. Testing environment 
