--- a/global-salawat-challenge/global-rankings.mdx
+++ b/global-salawat-challenge/global-rankings.mdx
@@ -1,3 +1,8 @@
+---
+title: 'Global Rankings'
+description: 'Overview of global rankings page'
+---
+
 ## Introduction
 
 The Global Rankings page displays the top-ranking countries based on the total Salawat pledged in the Global Salawat Challenge. This guide explains each section and how users can interpret and interact with the page.
