--- a/global-salawat-challenge/home.mdx
+++ b/global-salawat-challenge/home.mdx
@@ -1,3 +1,8 @@
+---
+title: 'Home Page'
+description: 'Overview of home page'
+---
+
 ## Introduction
 
 This page is the main entry point for participating in the Global Salawat Challenge, where users can pledge Salawat (blessings) on the Prophet Muhammad ﷺ and view global contributions. This guide explains each section and how users can interact with the page.
