--- a/global-salawat-challenge/organizations.mdx
+++ b/global-salawat-challenge/organizations.mdx
@@ -1,3 +1,8 @@
+---
+title: 'Organizations'
+description: 'Overview of organizations page'
+---
+
 ## Introduction
 
 The Organization Leaderboard page displays the top organizations contributing to the Global Salawat Challenge, ranked by the amount of Salawat pledged. This guide explains the elements of the page and how users can interpret and interact with the information.
