--- a/global-salawat-dashboard/analytics.mdx
+++ b/global-salawat-dashboard/analytics.mdx
@@ -1,3 +1,8 @@
+---
+title: 'Analytics'
+description: 'Managing analytics'
+---
+
 ## Introduction
 
 The Global Salawat Challenge Dashboard is designed to help you track pledges, donations, and participation in the challenge. Here’s a quick guide to understand each section and use the system efficiently.
