--- a/global-salawat-dashboard/donations.mdx
+++ b/global-salawat-dashboard/donations.mdx
@@ -1,3 +1,8 @@
+---
+title: 'Donations'
+description: 'Managing donations'
+---
+
 ## Introduction
 
 The Donations page helps you view, filter, and export donation data associated with the challenge. Use this guide to understand each section and learn how to use the page effectively.
