--- a/global-salawat-dashboard/organizations.mdx
+++ b/global-salawat-dashboard/organizations.mdx
@@ -1,3 +1,8 @@
+---
+title: 'Organizations'
+description: 'Managing organizations'
+---
+
 ## Introduction
 
 The Organizations page allows you to add new organizations, generate unique referral links, and manage existing organizations associated with the challenge. Use this guide to understand each feature and learn how to use the page effectively.
