--- a/global-salawat-dashboard/pledges.mdx
+++ b/global-salawat-dashboard/pledges.mdx
@@ -1,3 +1,8 @@
+---
+title: 'Pledges'
+description: 'Managing pledges'
+---
+
 ## Introduction
 
 The Pledges page allows you to add new pledges, review and filter existing pledges, and view the countries that have joined the challenge. This guide provides an overview of each feature and step-by-step instructions on how to use them.
