--- a/global-salawat-dashboard/settings.mdx
+++ b/global-salawat-dashboard/settings.mdx
@@ -1,3 +1,8 @@
+---
+title: 'Settings'
+description: 'Managing site settings'
+---
+
 ## Introduction
 
 The Settings page enables you to configure key parameters for managing pledges, donations, and general application settings for the Global Salawat Challenge. This guide will help you understand each setting and how to adjust it according to your requirements.
