--- a/development-tools/design.mdx
+++ b/development-tools/design.mdx
@@ -1,3 +1,8 @@
+---
+title: 'Design'
+description: 'Managing designs in Figma'
+---
+
 ## Introduction
 
 Builder.io is a powerful tool for managing and updating your website content. This guide will walk you through the process of logging in, navigating to your pages, and making changes to your site.
