--- a/development-tools/user-management.mdx
+++ b/development-tools/user-management.mdx
@@ -1,3 +1,8 @@
+---
+title: 'User Management'
+description: 'Managing users using Clerk'
+---
+
 ## Introduction
 
 Builder.io is a powerful tool for managing and updating your website content. This guide will walk you through the process of logging in, navigating to your pages, and making changes to your site.
